@@ -24,6 +24,7 @@
 - When updating a stub and the ID has not changed, do not delete the stub as this is pointless (https://github.com/dukeofharen/httplaceholder/pull/225).
 - Fixed indenting issue in CodeMirror editor (https://github.com/dukeofharen/httplaceholder/pull/226).
 - Added docs to user interface (https://github.com/dukeofharen/httplaceholder/pull/227).
+- Added separate form helper for enabling / disabling dynamic mode (https://github.com/dukeofharen/httplaceholder/pull/228).
 
 # BREAKING CHANGES
 - As mentioned before, the "clean old requests" job is now enabled by default. If you want HttPlaceholder to continue cleaning requests in the old way, set `cleanOldRequestsInBackgroundJob` to `false` to not get a bigger bill on your serverless database than needed.
